# filegroup-of-cc-test

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
image/: BUILD.bazel  hello-world.cc
test/: BUILD.bazel
test_fg/: BUILD.bazel
test_zip/: BUILD.bazel
