#################################################################
# Packaging (zip/tar) rules
#################################################################
bazel_dep(name = "rules_pkg", version = "0.10.0")

#################################################################
# Google Test
#################################################################
bazel_dep(name = "googletest", version = "1.14.0")
