load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

cc_test(
    name = "hello-test",
    size = "small",
    srcs = ["hello-test.cc"],
    deps = ["@googletest//:gtest_main"],
    testonly = True,
)

pkg_zip(
    name = "autotest",
    srcs = [":hello-test"],
    visibility = ["//visibility:public"],
    testonly = True,
)
